# bob_vector_db

./: CMakeLists.txt  README.md  package.xml
bob_vector_db/: chroma_embedder.py  embedder.py  json_embedder.py  qdrant_embedder.py  setup.cfg
config/: vectordb.yaml
launch/: embedder.launch.py
